objects/JBCXM__PlaybookInfo__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__CTA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call To Action</label>
        <referenceTo>JBCXM__CTA__c</referenceTo>
        <relationshipLabel>Playbook Info</relationshipLabel>
        <relationshipName>Playbook_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <label>Playbook Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playbook</label>
        <referenceTo>JBCXM__Playbook__c</referenceTo>
        <relationshipLabel>Playbook Info</relationshipLabel>
        <relationshipName>PlaybookInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Playbook Info</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>Playbook Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playbook Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>